# tempmon

./: .flake8  .gitignore  README.md  botspace.py  config_helper.py  main.py  notes.md  ohm_handler.py  ohm_helper.py  pyproject.toml  regui.py  regui2.py  requirements.txt  run_tempmon.ps1  tempmon.py  tmsettings.py
assets/: config.json
cubic/discbot/: botspace.py
cubic/elevater/: __init__.py
cubic/ohm/: __init__.py
modules/: gui-deprecated.py  gui.py  gui2.py  regui.py  tmsettings.py
modules/elevater/: __init__.py
modules/ohm/: __init__.py
mypacks/configer/: __init__.py  config_helper.py
mypacks/ohm/: __init__.py
ohm/: __init__.py  helper.py
old/: config.json  gui.py  tempmon.py  tmsettings.py
old/ohm/: __init__.py
src/: gui.py  tempmon.py  tmsettings.py
tempmon/: config.py  gui.py  gui_callbacks.py  main.py  my_func.py  my_functions.py  ohm.py  twiggy_setup.py
