[tool.poetry]
name = "tempmon"
version = "0.5.0-alpha.1"
description = "A simple CPU and GPU temperature monitor."
license = "MIT"
authors = ["cubic-unit <cadenblox@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/cubic-unit/tempmon"
repository = "https://github.com/cubic-unit/tempmon"


[tool.poetry.dependencies]
python = "^3.8"
elevate = "^0.1.3"
dearpygui = "^0.5.0"
pythonnet = "^2.5.1"
click = "^7.1.2"
Twiggy = "^0.5.0"
"ruamel.yaml" = "^0.16.12"
pendulum = "^2.1.2"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
rope = "^0.18.0"


[tool.poetry.scripts]
tempmon = 'tempmon.main:main'

[tool.black]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
